--- a/src/style.css
+++ b/src/style.css
@@ -3,23 +3,20 @@
     margin: 0;
 }
 
-main {
-    align-items: center;
-    justify-content: flex-start;
-    height: 100vh;
-}
-
-
-
 
 /*======= Texts ========*/
 main {
     text-align: center;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100vh;
+    width: 100%;
 }
-h1, h2, span {
-    font-family: 'Noto Sans KR', sans-serif;
+
+h1, h2 {
+    font-family: 'Nunito', sans-serif;
     font-size: 3.5rem;
-    font-weight: 500;
+    font-weight: 200;
 }
 
 h2 {
@@ -27,14 +24,14 @@ h2 {
 }
 
 span{
-    font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 900;
-    font-size: 4.5rem;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 700;
+    font-size: 3rem;
     margin: 0 0.3rem;
 }
 
 #miliseconds {
-    font-size: 2.3rem;
+    font-size: 1.5rem;
 }
 /*======= Navbar ========*/
 
@@ -47,16 +44,33 @@ span{
   width: 100%;
 }
 
+.stopwatch {
+    border: 3px solid blue;
+    border-radius: 50%;
+    height: 15rem;
+    min-width: 15rem;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0.5rem;
+}
+
 
 /*======= Buttons ========*/
 .btn {
+    border: 4px solid #00F;
     width: 5rem;
-    height: 2rem;
+    height: 5rem;
     border-radius: 5px;
-    border: 2px solid #000;
-    margin: 1rem;
+    margin: 1rem 2rem;
 }
 
-.btn.disable {
+.svg-inline--fa {
+    width: 2rem;
+    fill: #00f;
+}
+
+.disable {
     display: none;
 }
